# fastapi-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  skills-lock.json
.agents/: README.md  requirements.md
.agents/requirements/: INDEX.md  agent-workflow.md
.agents/rules/: INDEX.md  ai-fast-development.md  dev-workflow.md  docs-maintenance.md  fastapi-domain-scaffold.md  fastapi-endpoint-add.md  fastapi-test-writer.md  requirements-governance.md  sqlalchemy.md
.agents/skills/add-domain/: SKILL.md
.agents/skills/add-endpoint/: SKILL.md
.agents/skills/agent-builder/references/: minimal-agent.py  subagent-pattern.py  tool-templates.py
.agents/skills/agent-builder/scripts/: init_agent.py
.agents/skills/agent-orchestration/scripts/: crewai-crew.py  openai-multi-agent.py
.agents/skills/breakdown/: SKILL.md
.agents/skills/deployment-pipeline/scripts/: health-check.py
.agents/skills/dev-workflow/: SKILL.md
.agents/skills/discuss-reqs/: SKILL.md
.agents/skills/fastapi-best-practices/: SKILL.md
.agents/skills/feature/: SKILL.md
.agents/skills/fix-bug/: SKILL.md
.agents/skills/gather-reqs/: SKILL.md
.agents/skills/refactor/: SKILL.md
.agents/skills/security-review/: SKILL.md
.agents/skills/ship-change/: SKILL.md
.agents/skills/upgrade-deps/: SKILL.md
.agents/skills/write-pr/: SKILL.md
.agents/skills/write-tests/: SKILL.md
.claude/: requirements.md
.claude/agents/: code-reviewer.md  docs-maintainer.md  fastapi-architect.md  security-reviewer.md  test-writer.md
.claude/commands/: add-domain.md  add-endpoint.md  db-change.md  dev-workflow.md  fastapi-best-practices.md  fix-bug.md  security-review.md  ship-change.md
.claude/rules/: ai-fast-development.md  data-design.md  dev-workflow.md  docs-maintenance.md  fastapi-best-practices.md  fastapi-domain-scaffold.md  fastapi-endpoint-add.md  fastapi-test-writer.md  sqlalchemy.md  troubleshooting.md
.claude/skills/add-domain/: SKILL.md
.claude/skills/add-endpoint/: SKILL.md
.claude/skills/breakdown/: SKILL.md
.claude/skills/db-change/: SKILL.md
.claude/skills/dev-workflow/: SKILL.md
.claude/skills/discuss-reqs/: SKILL.md
.claude/skills/fastapi-best-practices/: SKILL.md
.claude/skills/feature/: SKILL.md
.claude/skills/gather-reqs/: SKILL.md
.claude/skills/upgrade-deps/: SKILL.md
.claude/skills/write-pr/: SKILL.md
.claude/skills/write-tests/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  codeql.yml  docker.yml  release.yml
alembic/: env.py
alembic/versions/: 2026-06-02_add_auth_sessions.py  2026-06-02_add_rbac_roles_and_permissions.py  2026-06-02_initial_schema.py
app/: __init__.py  main.py  router.py  worker.py
app/auth/: constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  security.py  seed.py  service.py
app/core/: arq.py  cache.py  config.py  error_codes.py  error_handlers.py  exceptions.py  i18n.py  limiter.py  logging.py  middleware.py  openapi.py  pagination.py  request_context.py  response.py  schemas.py  sentry.py
app/db/: base.py  redis.py  session.py
app/health/: router.py
app/users/: constants.py  dependencies.py  exceptions.py  models.py  repository.py  router.py  schemas.py  service.py
docs/: engineering-foundation-design.md  engineering-foundation-requirements.md  fastapi-saas-infrastructure-architecture-blueprint.md  release-chain.md
docs/adr/: 0001-use-agents-as-ai-workflow-source.md  README.md  template.md
locales/: en-US.json  zh-CN.json
scripts/: check_ai_workflow.py
skills/dev-workflow/: SKILL.md
skills/fastapi-best-practices/: SKILL.md
skills/fastapi-best-practices/agents/: openai.yaml
skills/fastapi-best-practices/references/: source-summary.md
tests/: conftest.py  test_auth.py  test_middleware.py  test_tasks.py
tests/auth/: test_auth.py  test_repository.py  test_seed.py
tests/core/: test_cache.py  test_cache_unit.py  test_config.py  test_error_handlers.py  test_i18n.py  test_infra_clients.py  test_limiter.py  test_logging.py  test_middleware.py  test_openapi.py  test_response.py  test_tasks.py
tests/health/: test_health.py
tests/users/: test_users.py
